Fixing word-wrap 1

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -141,3 +141,9 @@ code, kbd{
     font-size: 15px;
     padding: 2px 4px;
 }
+
+/* My Code */
+
+.main-col {
+    word-break: break-all;
+}
